--- a/DEMO/pom.xml
+++ b/DEMO/pom.xml
@@ -99,6 +99,21 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.blockchain.bootstrap.BootstrapNode</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project> 
